--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <html>
   <body>
-    Hello World<br>
+    Hello World!<br>
+    <br>
     <a href="https://gcvx.github.io/GeoffApp/">Visit GeoffApp</a> 
     <br>
     <a href="https://gcvx.github.io/MaStation/">Visit MaStation App</a>
+    <br>
   </body>
 </html>
